--- a/mobile_app/package.json
+++ b/mobile_app/package.json
@@ -14,6 +14,7 @@
     "@aws-amplify/auth": "^6.16.0",
     "@aws-amplify/react-native": "^1.2.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native/new-app-screen": "0.82.1",
     "aws-amplify": "^6.15.7",
     "react": "19.1.1",
