--- a/mobile_app/ios/apex_predictor/Info.plist
+++ b/mobile_app/ios/apex_predictor/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>apex predictor</string>
+	<string>Apex Predictor</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
