--- a/mobile_app/package.json
+++ b/mobile_app/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@aws-amplify/api-graphql": "^4.8.0",
@@ -19,6 +20,7 @@
     "aws-amplify": "^6.15.7",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-get-random-values": "^2.0.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-svg": "^15.14.0",
@@ -41,6 +43,7 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "patch-package": "^8.0.1",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.1",
     "typescript": "^5.8.3"
